# MRB-BallBalance

./: .gitignore
hardware/: README.md
hardware/arduino/: BuildModule.cmake  Sources.cmake
hardware/arduino/src/: main.cpp
hardware/src/: main.cpp
vision/: CMakeLists.txt
vision/src/: UART.cpp  UART.hpp  circle_detector.cpp  circle_detector.hpp  coordinator.cpp  coordinator.hpp  display.cpp  display.hpp  main.cpp  mrb.cpp  mrb.hpp  mrb_math.hpp  pid.cpp  pid.hpp  servo.cpp  servo.hpp
